Closed Bug 411112 Opened 18 years ago Closed 18 years ago

AIX Compilation error for trunk build source nsPNGEncoder.cpp : mozilla/modules/libpr0n/encoders/png/nsPNGEncoder.cpp", line 159.14: 1540-0217 (S) "jmpbuf" is not a member of "struct png_struct_def".

Categories

(Core :: Graphics: ImageLib, defect)

Other
AIX
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9beta3

People

(Reporter: shailen.n.jain, Assigned: shailen.n.jain)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.11) Gecko/20071127 Firefox/2.0.0.11 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.11) Gecko/20071127 Firefox/2.0.0.11 On AIX, while compiling trunk build source mozilla/modules/libpr0n/encoders/png/nsPNGEncoder.cpp etting below compilation error - "/mozilla/modules/libpr0n/encoders/png/nsPNGEncoder.cpp", line 159.14: 1540-0217 (S) "jmpbuf" is not a member of "struct png_struct_def". "/mozilla/modules/libpr0n/encoders/png/nsPNGEncoder.cpp", line 232.14: 1540-0217 (S) "jmpbuf" is not a member of "struct png_struct_def". "/mozilla/modules/libpr0n/encoders/png/nsPNGEncoder.cpp", line 311.14: 1540-0217 (S) "jmpbuf" is not a member of "struct png_struct_def". Reproducible: Always Steps to Reproduce: 1.Build Mozilla Firefox Trunk build on AIX with Gnome 2.12 RPMS of 64 bit version 2. 3. Actual Results: Build fails with the above error. Expected Results: No build failure
OS: Other → AIX
Version: unspecified → Trunk
Component: Build Config → ImageLib
Product: Firefox → Core
QA Contact: build.config → imagelib
Attached patch Patch V1Splinter Review
Looks like reverting back the fix for the bug 308126 resolves the issue.
Attachment #295750 - Flags: review?(pavlov)
do we need this or not? *confused*
I suppose we do not need this and removing the fix for Bug 308126 would resove the above compilation error.
bug 308126 added this code to fix a compilation error for AIX. Are we going to break whoever if we check this in?
I believe we are not breaking the code as I have tested many times.
so, how is your version of aix different from that other version of aix?
The AIX version that is used for testing is 5.2
Comment on attachment 295750 [details] [diff] [review] Patch V1 i guess since this is the latest bug filed we'll back out the other bug.
Attachment #295750 - Flags: review?(pavlov)
Attachment #295750 - Flags: review+
Attachment #295750 - Flags: approval1.9+
Assignee: nobody → shailen.n.jain
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: checkin-needed
Checking in modules/libpr0n/encoders/png/nsPNGEncoder.cpp; /cvsroot/mozilla/modules/libpr0n/encoders/png/nsPNGEncoder.cpp,v <-- nsPNGEncoder.cpp new revision: 1.8; previous revision: 1.7 done
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: