Bug 411112 - "AIX Compilation error for trunk build source nsPNGEncoder.cpp : mozilla/modules/libpr0n/encoders/png/nsPNGEncoder.cpp", line 159.14: 1540-0217 (S) "jmpbuf" is not a member of "struct png_struct_def"." [p=shailen.n.jain@gmail.com (Shailen) r+a1.9=stuart]